tests/scan/fixtures/validation/negative/clean_go_clean-health-endpoint/go.mod
module github.com/example/clean-health-endpoint
go 1.21
